# mega-market-mvp

./: README.md  pyproject.toml
catalog/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
catalog/data/: test_data.json
catalog/management/commands/: fill_db.py  load_countries.py
catalog/migrations/: 0001_initial.py  0002_product_is_active.py  0003_alter_product_category.py  0004_alter_product_category_alter_product_creation_date_and_more.py  0005_alter_category_name.py  0006_alter_category_options_alter_product_options.py  0007_contact_customer.py  0008_contact_address.py  0009_alter_product_description.py  0010_alter_category_description.py  0011_category_image.py  0012_alter_product_options_product_views_count.py  0013_posts.py  0014_alter_posts_options_alter_posts_image.py  0015_productversion_product_current_version.py  0016_alter_productversion_is_current.py  0017_delete_customer_alter_product_last_modified.py  0018_rename_purchase_price_product_price.py  0019_alter_category_options_alter_contact_options_and_more.py
catalog/templates/catalog/: base.html  categories.html  category_list.html  contacts.html  index.html  new_product.html  posts_confirm_delete.html  posts_detail.html  posts_form.html  posts_list.html  product_confirm_delete.html  products.html  (+5 more)
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
service/: utils.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_is_verified.py  0003_country_user_country.py  0004_alter_user_date_added_alter_user_last_modified.py
(+20 files in other folders)
