[tool.poetry]
name = "cartumart"
version = "0.1.0"
description = ""
authors = ["Tigran Saatchyan TSA <mr.saatchyan@yandex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.3"
psycopg2 = "^2.9.6"
pillow = "^10.0.0"
bpython = "^0.24"


[tool.poetry.group.develop.dependencies]
python-dotenv = "^1.0.0"
asyncio = "^3.4.3"
aiosmtpd = "^1.4.4.post2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
